--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo');
+@import url('https://fonts.googleapis.com/css?family=Tajawal:300,400');
 
 body {
   margin: 0;
   padding: 0;
-  font-family: Helvetica;
+  font-family: 'Tajawal', sans-serif;
 }
 h1::selection,h1::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,span::selection, a::selection {
   background-color: black;
