--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Cardo');
-@import url('https://fonts.googleapis.com/css?family=Tajawal:300,400');
+@import url('https://fonts.googleapis.com/css?family=Cardo|Tajawal:300,400');
 
 body {
   margin: 0;
