--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   padding: 0;
   font-family: 'Tajawal', sans-serif;
 }
+.super-container {
+	width: 100%;
+	height: 100vh;
+}
 h1::selection,h1::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,span::selection, a::selection {
   background-color: black;
   color: white;
