--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,26 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Tajawal', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .super-container {
-	width: 100%;
-	height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
-h1::selection,h1::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,span::selection, a::selection {
+h1::selection,
+h1::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection,
+p::selection,
+span::selection,
+a::selection {
   background-color: black;
   color: white;
 }
-@media(max-width: 769px) {
-	.super-container {
-		height: 100vh;
-	}
+@media (max-width: 769px) {
+  .super-container {
+    height: 100vh;
+  }
 }
