--- a/src/components/index.css
+++ b/src/components/index.css
@@ -247,17 +247,17 @@
   transition: 0.3s;
   margin-right: 1.4em;
   font-size: 1.1em;
-  font-weight: 600;
 }
 .link:hover {
   text-decoration: underline;
 }
-.fa-cog {
+.link-settings {
+  font-size: 1.1em;
   transition: 0.3s;
+  text-align: center;
 }
-.fa-cog:hover {
+.link-settings:hover {
   cursor: pointer;
-  transform: scale(1.3);
 }
 @media (max-width: 769px) {
   .nav {
@@ -313,7 +313,8 @@
     grid-area: links;
     margin-top: 1.5em;
   }
-  .link {
+  .link,
+  .link-settings {
     font-size: 1.6em;
     border-top: 1px solid var(--link-burger-border-color);
     width: 100%;
@@ -322,7 +323,8 @@
     padding-bottom: 0.7em;
     box-sizing: border-box;
   }
-  .link:hover {
+  .link:hover,
+  .link-settings:hover {
     background-color: rgb(231, 232, 232);
     color: black;
     text-decoration: none;
