--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -457,6 +457,9 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
+a {
+  text-decoration: none;
+}
 img {
   max-width: 100%;
   margin-left: 0;
