--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,3 @@
-code[class*="language-"],
 pre[class*="language-"] {
 	text-align: left;
 	white-space: pre;
@@ -6,33 +5,24 @@ pre[class*="language-"] {
 	word-break: normal;
 	word-wrap: normal;
 	color: #eee;
-	background: #2f2f2f;
+	/* background: blue; */
 	font-family: Roboto Mono, monospace;
 	font-size: 1em;
 	line-height: 1.5em;
-
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	tab-size: 4;
-
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
 }
 
-code[class*="language-"]::-moz-selection,
-pre[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection,
-pre[class*="language-"] ::-moz-selection {
-	background: #363636;
-}
-
 code[class*="language-"]::selection,
 pre[class*="language-"]::selection,
 code[class*="language-"] ::selection,
 pre[class*="language-"] ::selection {
-	background: #363636;
+	background: rgb(34,16,173);
 }
 
 :not(pre) > code[class*="language-"] {
