--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -43,9 +43,6 @@ pre[class*="language-"] {
   color: #db4c69;
   background: #f9f2f4;
 }
-/*********************************************************
-* Tokens
-*/
 .namespace {
   opacity: .7;
 }
@@ -106,9 +103,6 @@ pre[class*="language-"] {
 .token.entity {
   cursor: help;
 }
-/*********************************************************
-* Line highlighting
-*/
 pre[data-line] {
   position: relative;
 }
@@ -791,6 +785,10 @@ pre tt:after {
   main > div {
     width: 95%;
   }
+  pre[class*="language-"],
+  code[class*="language-"] {
+    font-size: 14px;
+  }
 }
 
 @media(prefers-color-scheme: light) {
@@ -807,7 +805,7 @@ pre tt:after {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background: rgb(28, 31, 33);
+    background: rgb(30, 33, 35);
     color: white;
   }
   a {
