--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -946,6 +946,7 @@ pre tt:after {
   code[class*='language-'],
   pre[class*='language-'] {
     color: #9efeff;
+    background: none;
     direction: ltr;
     text-align: left;
     white-space: pre;
@@ -958,7 +959,7 @@ pre tt:after {
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
-    font-family: 'Operator Mono', 'Fira Code', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
     font-weight: 400;
     font-size: 17px;
     line-height: 25px;
